--- a/k-means.ipynb
+++ b/k-means.ipynb
@@ -55,7 +55,7 @@
     "4. Calcul des nouveaux centroids en faisant la moyenne des instances de son cluster  \n",
     "5. Si les centroids n'ont pas été modifiés pendant la dernière itération, on retourne ces centroids, sinon, aller à l'étape 2\n",
     "\n",
-    "**ATTENTION** : le k choisi pour l'algorithme doit être inférieur aux nombre d'instances.\n",
+    "**ATTENTION** : le k choisi pour l'algorithme doit être inférieur au nombre d'instances.\n",
     "\n",
     "## Le code\n",
     "\n",
